--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
             <ul class="navbar-nav ml-auto" data-toggle="modal" data-target="#checkTerm">
                 <li class="nav-item">
                     <a href="#" class="nav-link">
-                        <i class="fa fa-calendar-check" aria-hidden="true"></i> Sprawdź Termin
+                        <i class="head fa fa-calendar-check" aria-hidden="true"></i> Sprawdź Termin
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="tel:+48729105924" class="nav-link">
-                        <i class="fa fa-phone-alt" aria-hidden="true"></i> Zadzwoń
+                        <i class="head fa fa-phone-alt" aria-hidden="true"></i> Zadzwoń
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="https://www.google.pl/maps/dir//54.7991403,17.6195335/@54.6341123,17.6349769,9.68z/data=!4m2!4m1!3e0"
                         class="nav-link">
-                        <i class="fa fa-location-arrow" aria-hidden="true"></i> Wyznacz Trasę
+                        <i class="head fa fa-location-arrow" aria-hidden="true"></i> Wyznacz Trasę
                     </a>
                 </li>
             </ul>
@@ -120,22 +120,150 @@
         </div>
 
         <div class="circle" aria-hidden="true">
-            <a href="#down">
+            <a href="#slider">
                 <i class="arrow fas fa-angle-double-down"></i>
             </a>
         </div>
     </div>
-    <section class="findUs">
-        <div class="container">
+    <section>
+    </section>
+    <section id="slider">
+        <div class="container mt-5">
             <div class="row">
-                <div class="left col-6">
+                <div class="col-12 col-md-7 mb-4">
+                    <div id="mainCarousel" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img class="d-block w-100" src="../images/beach-5377244_1920.jpg" alt="Second slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="../images/the-old-breakwater-3871577_1920.jpg"
+                                    alt="First slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="../images/dunes-4033821_1920.jpg" alt="Third slide">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#mainCarousel" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#mainCarousel" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-12 col-md-5">
+                    <h3>SLAJDY Z NAD MORZA</h3>
+                    <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem,
+                        omnis dolore. Vero quod fuga consectetur assumenda rerum, earum ipsum deleniti dolorum
+                        quidem aliquid eius repellendus odio quasi amet autem porro. Lorem ipsum dolor sit amet
+                        consectetur adipisicing elit. Quam in quod qui illum quo repudiandae error, cum cupiditate modi
+                        a recusandae magnam similique repellendus sequi minima explicabo quis ad aut?</p>
+                    <a href="#" class="more">See more</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="quotes">
+        <div class="container text-center mt-5">
+            <h3>OPINIE NASZYCH KLIENTÓW</h3>
+            <div class="row mt-3">
+                <div class="col-md-4 col-12">
+                    <i class="fas fa-quote-left fa-2x"></i>
+                    <blockquote class="blockquote">
+                        <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
+                            ante.</p>
+                        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source
+                                Title</cite></footer>
+                    </blockquote>
+                </div>
+                <div class="col-md-4 col-12">
+                    <i class="fas fa-quote-left fa-2x"></i>
+                    <blockquote class="blockquote">
+                        <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
+                            ante.</p>
+                        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source
+                                Title</cite></footer>
+                    </blockquote>
+                </div>
+                <div class="col-md-4 col-12">
+                    <i class="fas fa-quote-left fa-2x"></i>
+                    <blockquote class="blockquote">
+                        <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
+                            ante.</p>
+                        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source
+                                Title</cite></footer>
+                    </blockquote>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container mt-5 text-center">
+            <h3>ZDJĘCIA NADESŁANE PRZEZ KLIENTÓW</h3>
+            <h5 class="text-primary">#BALTYK</h5>
+            <div class="row gallery">
+                <div class="col-md-3 col-6">
+                    <img src="../images/gallery/dog-1561717_1920.jpg" alt="baltyk1" class="img-fluid">
+                </div>
+                <div class="col-6 col-md-3 gallery">
+                    <img src="../images/gallery/forest-5467791_1920.jpg" alt="baltyk2" class="img-fluid">
+                </div>
+                <div class="col-6 col-md-3">
+                    <img src="../images/gallery/port-1234282_1920.jpg" alt="baltyk3" class="img-fluid">
+                </div>
+                <div class="col-6 col-md-3">
+                    <img src="../images/gallery/sea-4366571_1920.jpg" alt="baltyk4" class="img-fluid">
+                </div>
+            </div>
+            <div class="row gallery">
+                <div class="col-6 col-md-3">
+                    <img src="../images/gallery/the-seagulls-630915_1920.jpg" alt="baltyk5" class="img-fluid">
+                </div>
+                <div class="col-6 col-md-3">
+                    <img src="../images/gallery/sea-1759559_1920.jpg" alt="baltyk6" class="img-fluid">
+                </div>
+                <div class="col-6 col-md-3">
+                    <img src="../images/gallery/sea-4428218_1920.jpg" alt="baltyk7" class="img-fluid">
+                </div>
+                <div class="col-6 col-md-3">
+                    <img src="../images/gallery/sea-5332655_1920.jpg" alt="baltyk8" class="img-fluid">
+                </div>
+            </div>
+            <div class="row gallery">
+                <div class="col-6 col-md-3">
+                    <img src="../images/gallery/sea-bridge-3984927_1920.jpg" alt="baltyk9" class="img-fluid">
+                </div>
+                <div class="col-6 col-md-3">
+                    <img src="../images/gallery/sailing-ship-2533691_1920.jpg" alt="baltyk10" class="img-fluid">
+                </div>
+                <div class="col-6 col-md-3">
+                    <img src="../images/gallery/sunset-3386130_1920.jpg" alt="baltyk7" class="img-fluid">
+                </div>
+                <div class="col-6 col-md-3">
+                    <img src="../images/gallery/sea-989677_1920.jpg" alt="baltyk8" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="findUs">
+        <div class="container mt-5">
+            <div class="row find">
+                <div class="left col-md-6 col-12">
                     <div id="map-container-google" class=" map-container">
                         <iframe
                             src="https://maps.google.com/maps?q=%C5%82eba%20portowa%201&t=&z=17&ie=UTF8&iwloc=&output=embed"
                             frameborder="0" style="border:0" allowfullscreen></iframe>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="msg col-md-6 col-12">
                     <h2>Noclegi Bałtyk</h2>
                     <h4 class="display-5">Skontaktuj się z nami</h4>
                     <h5 class="display-7">Nasze dane kontaktowe</h5>
@@ -161,8 +289,16 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="socialMedia text-center mt-5">
+            <h3 id="social">ŚLEDŹ NAS NA</h3>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+        </div>
+    </section>
     <footer>
-        <div class="footer d-flex justify-content-center align-items-center">
+        <div class="footer d-flex justify-content-center align-items-center mt-5">
             2020 All rights reserved. Development by
             <a id="author" href="https://github.com/MaciejNarejko/"> Maciej Narejko</a>
         </div>
